--- a/styles.css
+++ b/styles.css
@@ -196,11 +196,12 @@ main {
     line-height: 1.6;
 }
 
-.contact a {
+.contact .container a {
     color: #25D366;
     text-decoration: none;
     font-weight: bold;
     font-size: 2.5rem;
+    display: inline-block;
 }
 
 .location {
